fix nav spacing

--- a/less/components/ap-nav-vertical.less
+++ b/less/components/ap-nav-vertical.less
@@ -10,7 +10,7 @@
   margin-top: 10px;
 }
 
-.nav.ap-nav-vertical > li:first-child + li {
+.nav.ap-nav-vertical > li:first-child ~ li {
   margin-top: 2px;
 }
 
